--- a/PostgreSQL_Uploader.ipynb
+++ b/PostgreSQL_Uploader.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 279,
    "outputs": [],
    "source": [
     "# Extract Tweets\n",
@@ -270,8 +270,8 @@
     "tweets = []\n",
     "twcollection=db['tweets']\n",
     "twcursor = twcollection.find({})\n",
-    "tweet_list = list(comcursor)\n",
-    "tweets = pd.DataFrame(comment_list)"
+    "tweet_list = list(twcursor)\n",
+    "tweets = pd.DataFrame(tweet_list)"
    ],
    "metadata": {
     "collapsed": false
@@ -279,8 +279,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 280,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        _id  index             tweet_id  \\\n",
+      "0  639508257742021d7e9a780c      0  1601668368737906688   \n",
+      "1  639508257742021d7e9a780d      1  1601667312930590721   \n",
+      "2  639508257742021d7e9a780e      2  1601660414743687169   \n",
+      "3  639508257742021d7e9a780f      3  1601658384947638272   \n",
+      "4  639508257742021d7e9a7810      4  1601625011009179649   \n",
+      "\n",
+      "                   datetime  \\\n",
+      "0  2022-12-10T20:01:11.000Z   \n",
+      "1  2022-12-10T19:56:59.000Z   \n",
+      "2  2022-12-10T19:29:34.000Z   \n",
+      "3  2022-12-10T19:21:31.000Z   \n",
+      "4  2022-12-10T17:08:54.000Z   \n",
+      "\n",
+      "                                                text  username  quotecount  \\\n",
+      "0                            https://t.co/80DdvpsNjM  elonmusk        1291   \n",
+      "1  Twitter is both a social media company and a c...  elonmusk        3008   \n",
+      "2  @elizableu Looks like Yoel is arguing in favor...  elonmusk        1100   \n",
+      "3                     @elizableu This explains a lot  elonmusk          90   \n",
+      "4                            https://t.co/xKmQ8m7uHq  elonmusk         141   \n",
+      "\n",
+      "   likecount  replycount  retweetcount  tweetinreply  \n",
+      "0     154727        7896         18082           NaN  \n",
+      "1     174649       13154         27178           NaN  \n",
+      "2      20465        2556          5630  1.601658e+18  \n",
+      "3      29890         850          2693  1.601636e+18  \n",
+      "4      44830        1663          2938  1.601625e+18  \n"
+     ]
+    }
+   ],
    "source": [
     "print(tweets.head())"
    ],
@@ -290,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "tweets = tweets.drop(['_id'], axis=1)"
@@ -392,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 282,
    "outputs": [],
    "source": [
-    "sqlQuery = \"SELECT datname FROM twitter WHERE datistemplate = false;\";\n",
-    "sqlRemDb = \"DROP table \"+'reddit_threads'+\";\""
+    "#sqlQuery = \"SELECT datname FROM twitter WHERE datistemplate = false;\";\n",
+    "#sqlRemDb = \"DROP table \"+'tweets'+\";\""
    ],
    "metadata": {
     "collapsed": false
@@ -404,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 283,
    "outputs": [],
    "source": [
     "dbCursor.execute(sqlRemDb);"
@@ -467,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 285,
    "outputs": [],
    "source": [
     "# Create twitter threads table\n",
@@ -549,6 +583,24 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "700"
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets.to_sql(\"tweets\", engine, if_exists='replace')"
    ],
