--- a/social_media_to_mongo.ipynb
+++ b/social_media_to_mongo.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "outputs": [
     {
      "name": "stdout",
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "print(len(tweets_df2))"
+    "print(len(tweets_df2))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "outputs": [],
    "source": [
     "# Save tweets as JSON and upload to MongoDB\n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "outputs": [],
    "source": [
     "with open('twitter.json') as file:\n",
@@ -595,8 +595,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 86,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<pymongo.results.InsertManyResult at 0x1a6c5bced00>"
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# Check if collection exists already and drop it if it does\n",
